# CG-A2

./: README.md
assignment2/part1/: CMakeLists.txt
assignment2/part1/src/: part1.cpp
assignment2/part1/src/shaders/: rgb_cube.frag  rgb_cube.vert
assignment2/part2/: CMakeLists.txt
assignment2/part2/src/: part2.cpp
assignment2/part2/src/shaders/: mesh.vert
